--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ nav ul {
 nav ul input {
   position: absolute;
   right: 20px;
-  top: 40rem;
+  top: 50%;
   outline: none;
   border: none;
   padding: 5px 10px;
