--- a/style.css
+++ b/style.css
@@ -142,6 +142,12 @@ nav a {
   box-shadow: 0px 0px 5px gray;
 }
 
+@media screen and (max-width: 850px) {
+  .all-m {
+    left: 35%;
+  }
+}
+
 .all-m2 {
   position: absolute;
   padding: 23px 27px;
